hotspot/share/opto/parse2.cpp compile error with gcc 7.3.1

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 12
    • Affects Version/s: 11, 12
    • Component/s: hotspot
    • b16
    • generic
    • generic

      When building jdk/jdk with gcc 7.3.1 (with warnings as errors disabled) we run into this issue :

      /open_jdk/jdk_just_clone/jdk/src/hotspot/share/opto/parse2.cpp:1349:14: note: ‘sprintf’ output 2 or more bytes (assuming 2147488583) into a destination of size 30
             sprintf(prob_str_buf, "%g", prob);
             ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
      cc1plus: all warnings being treated as errors

            Assignee:
            Matthias Baesken
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: