8211929: hotspot/share/opto/parse2.cpp compile error with gcc 7.3.1

Reviewed-by: kvn, stuefe